styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root {
    --primary-color: #255876;
    --secondary-color: #f9fafa;
    --accent1-color: #d5d8d9;
    --accent2-color: #f2b143;
    --accent3-color: #566872;

    --heading-font: 'Madimi One', sans-serif; 
    --paragraph-font: 'Roboto', sans-serif;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-family: "Sansita", sans-serif;
}

header img {
    max-width: 50px;
}

/* mobile **************************/
header {
	background-color: var(--accent1-color);
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 20px;
	border: 1px solid rgba(0, 0, 0, 0.1);
}

header img {
    margin-right: 10px;
}

header,
main {
	margin: 0 auto;
}

h1 {
	font-size: 2rem;
}

.hamburger {
    display: none;
    cursor: pointer;
    flex-direction: column;
}

.hamburger div {
    margin: 3px;
    width: 30px;
    height: 5px;
    background-color: var(--secondary-color);  
}

nav {
	background-color: var(--primary-color);
	margin: 0 auto;
	max-width: 800px;
}

nav ul {
	list-style-type: none;
}

nav a {
	display: block;
	color: var(--secondary-color);
	text-align: center;
	padding: 1rem;
	text-decoration: none;
}

nav a:hover {
	text-decoration:overline;
}

.active {
	color: var(--accent2-color);
}

main {
    display: flex;
    flex-wrap: wrap;
    gap: 1.5rem;
    justify-content: space-evenly;
    padding: 1.5rem;
}

.courseWork ul {
    list-style-type: disc;
    padding-left: 1rem;
}

.module {
    background-color: var(--accent1-color);
    flex: 1;
    min-width: 350px;
    padding: 1rem;
    border: 2px solid var(--secondary-color);
    border-radius: 10px;
    box-shadow: 2px 2px 5px var(--primary-color);
}

.module h2 {
    background-color: var(--primary-color);
    color: var(--secondary-color);
    padding: 0.5rem;
    margin: -1rem -1rem 1rem -1rem;
    border-radius:10px 10px 0px 0px;
    text-align: center;
}

.utah img {
    height: auto;
    width: 100%;
}

figcaption {
    padding-top: 1rem;
    text-align: center;
}

.certificateFilter {
    margin-bottom: 20px;
    display: flex;
    justify-content: center;
    border-bottom: 1px solid var(--primary-color);
}

.filterButton {
    margin-left: 1rem;
    margin-right: 1rem;
    margin-bottom: 1rem;
    width: 10rem;
    
}

.filterButton.active {
    background-color: var(--primary-color);
    font-weight: bold;
}

.coursesList {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.courseBlock {
    border-radius: .5rem;
    padding: 15px;
    flex: 0 0 25%;
    margin: .5rem;
    background-color: var(--secondary-color);
    text-align: center;
}

.courseBlock.complete {
    background-color: var(--accent3-color);
    color: var(--secondary-color);
}

footer {
    background-color: var(--primary-color);
    color: var(--secondary-color);
    text-align: center;
    padding: 10px;
}
/* Smaller Views ******************************/
@media (max-width: 639px) {
    .courseBlock {
        flex: 0 0 100%;
    }
}

/* Larger Views ******************************/
@media (min-width: 640px) {
	nav ul {
		display: flex;
	}
	nav ul li {
		flex: 1 1 100%;
	}
}

